--- a/client/src/components/HeroFooter/style.css
+++ b/client/src/components/HeroFooter/style.css
@@ -6,3 +6,11 @@
 	justify-content: center;
 	align-items: center;
 }
+
+@media screen and (max-width: 480px){
+    .heroFooter{
+        text-align: center;
+        font-size: 0.8rem;
+        padding: 0;
+    }
+}
