--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -10,5 +10,34 @@
 	height: 100%;
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
+    align-items: center;
+}
+.nav ul{
+    border: 1px solid red;
+    width: 11rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav ul li{
+    list-style: none;
+    
+}
+
+.nav ul li a{
+    border: 1px solid black;
+    text-decoration: none;
+    font-size: 1.4rem;
+    
+}
+
+@media screen and (max-width: 480px){
+    .nav{
+        flex-direction: column;
+        width: 105%;
+    }
+    .navWrapper{
+        height: 20vh;
+    }
 }
