--- a/client/src/components/Services/style.css
+++ b/client/src/components/Services/style.css
@@ -36,7 +36,16 @@
 
 .imgContainer{
 	border: 1px solid black;
-	height: 8rem;
+    height: 8rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imgContainer img{
+    box-sizing: border-box;
+    width: 6rem;
 }
 
 @media screen and (max-width: 768px){
