--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -1,17 +1,15 @@
 .heroWrapper{
-	border: 1px solid black;
-	height: 90vh;
+	min-height: 90vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: flex-end;
     padding: 0 15%;
-    background-image: url('../img/Home.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .heroFormWrapper{
-	border: 1px solid black;
 	border-radius: 10px;
 	padding: 1.5rem;
 	width: 300px;
@@ -19,42 +17,52 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-    margin-bottom: -1.5rem
-    
+    margin-bottom: -1.5rem;
+    background-color: rgba(134, 122, 122, 0.8);    
     
 }
 
 .heroFormWrapper h2{
-	border: 1px solid black;
-	font-size: 2rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: #fff;
 }
 .heroFormWrapper input{
 	height: 1.5rem;
-	border-radius: 5px;
+    border-radius: 5px;
+    background-color: #e3e3e3;
+    font-style: italic;
+    padding-left: 4px;
+    border: none;
 }
 .heroFormWrapper button{
 	width: 6rem;
 	text-align: center;
-	height: 1.5rem;
+    height: 2rem;
+    background-color: #3a3773;
+    font-weight: 700;
+    color: #fff;
+    border: none;
 }
 
 .circleWrap{
-	border: 1px solid black;
 	display: flex;
 	justify-content: flex-end;
-	padding: 0 4rem;
+    padding: 0 4rem;
+    color: #3a3773;
+    margin-top: -1rem;
+    color: #fff;
 }
 
 .circle{
-	border: 1px solid red;
-	width: 3rem;
-	height: 3rem;
-	background-color: blue;
+	width: 3.5rem;
+	height: 3.5rem;
+	background-color: #3a3773;
 	border-radius: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: white;
+	color: #fff;
 }
 
 
@@ -63,13 +71,15 @@
 .heroOfferWrapper{
 	border: 1px solid black;
 	border-radius: 50%;
-	width: 250px;
-	height: 250px;
+	min-width: 250px;
+	min-height: 250px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-right: 2rem;
+    margin-right: 2rem;
+    background-color: #fff;
+    color: #3a3773;
 }
 
 .heroOffer{
@@ -90,17 +100,17 @@
 @media screen and (max-width: 768px){
 
         .heroWrapper{
-            padding-top: 1rem;
             align-items: center;
             width: 100%;
             padding: 0;
+
         }
         .heroFormWrapper{
             width: 250px;
         }
         
         .heroFormWrapper h2{
-            font-size: 1.6rem;
+            font-size: 1.3rem;
         }
         .heroOfferWrapper{
             margin: 0;
