--- a/client/src/components/HeroFooter/style.css
+++ b/client/src/components/HeroFooter/style.css
@@ -1,13 +1,15 @@
 .heroFooter{
-	border: 1px solid red;
 	height: 13vh;
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+    align-items: center;
+    background-color: #3a377e;
+    color: #fff;
+    font-size: 1.4rem;
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 768px){
     .heroFooter{
         text-align: center;
         font-size: 0.8rem;
