--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,34 +1,44 @@
 .navWrapper{
-	border: 1px solid black;
 	width: 100%;
-	height: 15vh;
+    height: 15vh;
+    -webkit-box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+    -moz-box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+    box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+    background-color: #fff;
+
 }
 
 .nav{
-	border: 1px solid black;
 	box-sizing: border-box;
 	height: 100%;
 	display: flex;
 	justify-content: space-around;
     align-items: center;
 }
+.nav img{
+    width: 13rem;
+}
 .nav ul{
-    border: 1px solid red;
-    width: 11rem;
+    width: 13rem;
     height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #3a377e;
+    
 }
 .nav ul li{
     list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    
     
 }
 
 .nav ul li a{
-    border: 1px solid black;
     text-decoration: none;
     font-size: 1.4rem;
+    color: white;
     
 }
 
@@ -37,7 +47,13 @@
         flex-direction: column;
         width: 100%;
     }
+    .nav img{
+        margin-top: 1rem;
+    }
+    .nav ul{
+        margin: 1rem 0;
+    }
     .navWrapper{
-        height: 20vh;
+        height: auto;
     }
 }
