--- a/client/src/components/Services/style.css
+++ b/client/src/components/Services/style.css
@@ -1,7 +1,7 @@
 .servicesContainer{
-	border: 1px solid black;
 	width: 100%;
-	height: 70vh;
+    height: 70vh;
+    color: #3a377e;
 }
 .servicesContainer h2{
 	width: 100%;
@@ -14,7 +14,6 @@
 }
 
 .servicesWrapper{
-	border: 1px solid red;
 	height: 80%;
 	display: flex;
 	justify-content: space-around;
@@ -24,18 +23,21 @@
 }
 
 .serviceElement{
-	border: 1px dashed green;
-	height: 14rem;
+	height: 16rem;
 	width: 12rem;
-	border-radius: 10px;
+    border-radius: 10px;
+    font-weight: 600;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	align-items: center;
+    align-items: center;
+    -webkit-box-shadow: 1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+-moz-box-shadow:    1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+box-shadow:         1px 1px 10px 0px rgba(50, 50, 50, 0.89);
+    
 }
 
 .imgContainer{
-	border: 1px solid black;
     height: 8rem;
     width: 6rem;
     display: flex;
@@ -45,7 +47,24 @@
 
 .imgContainer img{
     box-sizing: border-box;
-    width: 6rem;
+    height: 6rem;
+}
+.serviceElement a{
+    text-decoration: none;
+    background-color: #3a377e;
+    color: #fff;
+    height: 1.7rem;
+    width: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 1024px){
+    .servicesWrapper{
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 768px){
@@ -60,6 +79,7 @@
     .servicesContainer h2{
         justify-content: center;
         align-items: center;
+        font-size: 2.5rem;
     }
     .serviceElement{
         margin-bottom: 1rem;
